@@ -1,5 +1,7 @@
 2000-04-22  Tim Jenness  <timj@jach.hawaii.edu>
 
+	* Msg/ADAM/Task.pm: Use &Starlink::ADAM::DTASK__ACTCOMPLETE
+
 	* Inst/IRCAM.pm (start_msg_sys):  Add support for 'preserve' flag.
 	
 	* Inst/CGS4.pm (start_msg_sys):  Add support for 'preserve' flag.
